--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -51,7 +51,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="https://i.imgur.com/bCx8RR6.png" oncontextmenu="return false;" class="img-responsive" alt="">
+                    <img src="https://i.imgur.com/Y9R9Mhe.png" oncontextmenu="return false;" class="img-responsive" alt="">
                    
                 </a>
             </div>
