--- a/_includes/summary.html
+++ b/_includes/summary.html
@@ -1,6 +1,6 @@
   <aside class="bg-dark">
       <div class="container text-center">
-          <h2>I undertake all types of design jobs.</h2>
+          <h2>I undertake all types of Video and Graphic Design jobs.</h2>
                         
       </div>
   </aside>
