--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         	 <!--<img src="img/logo.png" alt="HTML5 Icon" style="width:600px;height:400px;">-->
             <h1>Babita Shekhawat</h1>
             <hr>
-            <p>I undertake all types of designing work.</p>
+            <p>I undertake all types of Video and Graphic Design jobs.</p>
             <a href="#about" class="btn btn-primary btn-xl wow tada page-scroll">About Me</a>
         </div>
     </div>
